<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Gothandroid</string>
    <string name="facebook_application_id" translatable="false">246225762609706</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb246225762609706</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tournament Manager</string>
    <string name="nav_header_subtitle">iqoid@iqoid.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_drawer_new">New</string>
    <string name="menu_drawer_open_unpublished">Open unpublished</string>
    <string name="menu_drawer_tournament_options">Tournament Options</string>
    <string name="menu_drawer_game_options">Game Options</string>
    <string name="menu_drawer_save_locally">Save locally</string>
    <string name="menu_drawer_communicate">Communicate</string>
    <string name="menu_drawer_my_account">My Account</string>
    <string name="menu_drawer_players_manager">Player Registration</string>
    <string name="menu_drawer_pair">Pair</string>
    <string name="menu_drawer_message">Messages</string>
    <string name="title_activity_create_tournament">Create Tournament</string>
    <string name="tournament_name_label">Name</string>
    <string name="tournament_short_name_label">Short name</string>
    <string name="tournament_location">Location</string>
    <string name="tournament_director">Director</string>
    <string name="tournament_begin_date">Begin Date</string>
    <string name="tournament_end_date">End Date</string>
    <string name="tournament_details">Tournament Details</string>
    <string name="tournament_system">System</string>
    <string name="mc_mahon_label">McMahon</string>
    <string name="swiss_label">Swiss</string>
    <string name="swiss_with_categories_label">Swiss with categories</string>
    <string name="tournament_number_of_rounds">Number of rounds</string>
    <string name="ok_label">OK</string>
    <string name="title_activity_players_manager">Player Registration</string>
    <string name="players_manager_player_label">Player</string>
    <string name="players_manager_register_new">Register New</string>
    <string name="players_manager_players_table_label">Players</string>
    <string name="players_manager_header_last_name">Last Name</string>
    <string name="players_manager_header_first_name">First Name</string>
    <string name="players_manager_header_country">Co</string>
    <string name="players_manager_header_club">Club</string>
    <string name="players_manager_header_rank">Rk</string>
    <string name="players_manager_header_rating">Rating</string>
    <string name="players_manager_header_grade">Gr</string>
    <string name="title_activity_pair">Pair</string>
    <string name="pair_round_no">Round</string>
    <string name="pair_ok_label">OK</string>
    <string name="pair_pairable_players_label">Pairable players</string>
    <string name="pair_label">Pair</string>
    <string name="pair_tables_label">Tables</string>
    <string name="pairable_players_header_name">Name</string>
    <string name="pairable_players_header_rank">Rank</string>
    <string name="pairable_players_header_sco">Sco</string>
    <string name="pairable_players_header_co">Co</string>
    <string name="pairable_players_header_club">Club</string>
    <string name="tables_header_table">Table</string>
    <string name="tables_header_white">White</string>
    <string name="tables_header_black">Black</string>
    <string name="tables_header_hd">Hd</string>
    <string name="notification_message">"%1$s update"</string>
    <string name="title_activity_myAccount">My Account</string>
    <string name="myaccount_send_profile_photo_message" translatable="false">Hi,\n\nPlease upload my profile photo with the attached file. My EGF Pin is %1$s\n\nThank you.</string>
    <string name="myaccount_no_profile_photo_available">No profile photo available. Click on avatar and take a selfie first</string>
    <string name="myaccount_egfpin_mandatory">EGF Pin is mandatory. Login cancelled.</string>
    <string name="myaccount_profile_photo_chooser_message">Send profile picture to EGF</string>
    <string name="ffg_lic_hint">FFG LIC</string>
    <string name="egf_pin_label">EGF PIN *</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="ffg_lic_label">FFG LIC *</string>
    <string name="aga_id_label">AGA ID *</string>
    <string name="required_in_order_to_join_tournaments">* Required in order to join tournaments</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="send_to_egd">Upload profile photo</string>
    <string name="login_to_gotha">Login to Gotha</string>
    <string name="you_are_logged_in_now">You are logged in now</string>
    <string name="error_logging_in">Error logging in. Please try again later.</string>
    <string name="logout_from_gotha">Logout from Gotha</string>
    <string name="you_are_logged_out_now">Logged out successfully</string>
    <string name="no_currently_opened_tournament">No currently opened tournament</string>
    <string name="format_notification">
        Tournament: <xliff:g id="name">%1$s</xliff:g> -
        Start: <xliff:g id="start">%2$s</xliff:g>
        Loc: <xliff:g id="location">%3$s</xliff:g>
    </string>
    <string name="channel_name">Gotha_channel_name</string>
    <string name="channel_description">Gotha_channel_description</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_latest_known_published_tournament" translatable="false">latest_known_published_tournament</string>
    <string name="pref_user_first_name" translatable="false">user_first_name</string>
    <string name="pref_user_last_name" translatable="false">user_last_name</string>
    <string name="pref_user_egf_pin" translatable="false">user_egf_pin</string>
    <string name="pref_user_ffg_lic" translatable="false">user_ffg_lic</string>
    <string name="pref_user_aga_id" translatable="false">user_aga_id</string>
    <string name="select_the_action">Select The Action</string>
    <string name="open">Open</string>
    <string name="edit">Edit</string>
    <string name="publish_tournament">Publish tournament</string>
    <string name="save_and_upload_tournament">Save and upload tournament</string>
    <string name="publish_results">Publish results</string>
    <string name="send_message_to_all">Send message to all</string>
    <string name="register">Register</string>
    <string name="subscribe">Subscribe</string>
    <string name="no_tournament_selected">No tournament selected</string>
    <string name="tournament_not_published">This tournament is not published yet</string>
    <string name="tournament_published">The tournament was published</string>
    <string name="tournament_publish_error">Publishing failed</string>
    <string name="tournament_saved_and_uploaded">The tournament was saved and uploaded</string>
    <string name="tournament_saved_and_uploaded_error">Saving tournament results in error</string>
    <string name="tournament_result_published">Results successfully published</string>
    <string name="tournament_subscription_success">Subscription succeeded</string>
    <string name="tournament_subscription_error">Subscription failed</string>
    <string name="tournament_registration_success">Registration succeeded</string>
    <string name="tournament_registration_error">Registration failed</string>
    <string name="tournament_result_error">Results publish failed</string>
    <string name="you_are_not_logged_in">Operation canceled. You are not logged in.</string>
    <string name="no_uid_available">Saving user information results in error</string>
    <string name="tournament_send_message">The message was sent successfully</string>
    <string name="tournament_send_message_error">An error occurred sending message</string>
    <string name="opened_for_registration_or_observation">Opened for registration or observation</string>
    <string name="observed_tournament">Observed tournament</string>
    <string name="registered_in_tournament">Registered in tournament</string>
    <string name="you_are_the_owner_of_the_tournament">You are the owner of the tournament</string>
    <string name="send_message_title">Send Message</string>
    <string name="enter_message_to_be_sent">Enter the message to be sent</string>
    <string name="format_tournament_info">
        Tournament: <xliff:g id="name">%1$s</xliff:g> -
        Start: <xliff:g id="start">%2$s</xliff:g>
        Loc: <xliff:g id="location">%3$s</xliff:g>
    </string>
    <string name="format_tournament_participants">
        Number of participants: <xliff:g id="name">%1$d</xliff:g>
    </string>
    <string name="message_title">Messages</string>
    <string name="results_title">Results</string>
    <string name="results_label">Results</string>
    <string name="games_header_table">Table</string>
    <string name="games_header_white">White</string>
    <string name="games_header_black">Black</string>
    <string name="games_header_hd">Hd</string>
    <string name="games_header_result">Result</string>
    <string name="menu_drawer_results">Results</string>
    <string name="results_info_label">Click on rows to change the result</string>
    <string name="title_activity_tournament_settings">Tournament Settings</string>
    <string name="tab_general">General</string>
    <string name="tab_handicap">Handicap</string>
    <string name="tab_placement">Placement</string>
    <string name="tab_pairing">Pairing</string>
    <string name="tournament_special_results">Special Results</string>
    <string name="tournament_nbw_absent">NBW for Absent player</string>
    <string name="tournament_mms_absent">MMS for Absent player</string>
    <string name="tournament_nbw_bye">NBW for Bye player</string>
    <string name="tournament_mms_bye">MMS for Bye player</string>
    <string name="round_down_nbw_and_mms_scores">Round down NBW and MMS scores</string>
    <string name="tournament_mcmahon_system">McMahon System</string>
    <string name="mcmahon_bar_label">McMahon Bar</string>
    <string name="mcmahon_floor_label">McMahon Floor</string>
    <string name="mcmahon_zero_label">McMahon Zero</string>
    <string name="no_handicap_when_both_player_s_mms_above">No handicap when both player\'s MMS above</string>
    <string name="handicap_ceiling">Handicap ceiling</string>
    <string name="handicap_based_on">Handicap based on</string>
    <string name="handicap_correction">Handicap correction</string>
    <string name="mcmahon_score">McMahon score</string>
    <string name="rank">Rank</string>
    <string name="handicap_not_corrected">Handicap not corrected</string>
    <string name="handicap_1">handicap -1</string>
    <string name="handicap_2">handicap -2</string>
    <string name="handicap_3">handicap -3</string>
    <string name="handicap_plus_1">handicap +1</string>
    <string name="criterion_1">First by</string>
    <string name="criterion_2">Second by</string>
    <string name="criterion_3">Third by</string>
    <string name="criterion_4">Fourth by</string>
    <string name="main_criteria">Main criteria</string>
    <string name="inside_a_group_use_a_seeding_system">Inside a group, use a seeding system</string>
    <string name="earlier_rounds_up_to_round">Earlier rounds up to round</string>
    <string name="earlier_rounds">Earlier rounds</string>
</resources>