<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.crilu.gothandroid.PlayersManagerActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MyAccount">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <TextView
                android:id="@+id/first_name_tv"
                android:text="@string/first_name_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/first_name"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/RegularLabelStyle" />

            <TextView
                android:id="@+id/last_name_tv"
                android:text="@string/last_name_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/last_name"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/RegularLabelStyle" />

            <TextView
                android:id="@+id/egf_pin_tv"
                android:text="@string/egf_pin_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/egf_player"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/RegularLabelStyle" />

            <TextView
                android:id="@+id/ffg_lic_tv"
                android:text="@string/ffg_lic_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/ffg_lic"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/RegularLabelStyle" />

            <TextView
                android:id="@+id/aga_id_tv"
                android:text="@string/aga_id_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/aga_id"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/RegularLabelStyle" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="aga_id_tv,ffg_lic_tv,last_name_tv,first_name_tv,egf_pin_tv,profile_btn,profile_photo_tv" />

            <EditText
                android:id="@+id/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                style="@style/TextInputRegularStyle" />

            <EditText
                android:id="@+id/last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toBottomOf="@+id/first_name"
                style="@style/TextInputRegularStyle" />

            <AutoCompleteTextView
                android:id="@+id/egf_player"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toBottomOf="@+id/last_name"
                style="@style/TextInputRegularStyle"/>

            <EditText
                android:id="@+id/ffg_lic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toBottomOf="@+id/egf_player"
                style="@style/TextInputRegularStyle" />

            <EditText
                android:id="@+id/aga_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toBottomOf="@+id/ffg_lic"
                style="@style/TextInputRegularStyle" />

            <TextView
                android:id="@+id/explanatory_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/required_in_order_to_join_tournaments"
                app:layout_constraintStart_toStartOf="@+id/aga_id_tv"
                app:layout_constraintTop_toBottomOf="@+id/aga_id_tv" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profile_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:scaleType="centerCrop"
                android:onClick="onClickTakePhoto"
                app:layout_constraintStart_toStartOf="@+id/aga_id_tv"
                app:layout_constraintTop_toBottomOf="@+id/profile_photo_tv"
                app:srcCompat="@drawable/ic_person" />

            <TextView
                android:id="@+id/profile_photo_tv"
                style="@style/RegularLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explanatory_text_tv" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/send_egd_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/send_to_egd"
                app:layout_constraintBottom_toBottomOf="@+id/profile_btn"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toTopOf="@+id/profile_btn" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onClickLogin"
                android:text="@string/login_to_gotha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_btn" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onClickLogout"
                android:text="@string/logout_from_gotha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>