<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.crilu.gothandroid.PairActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pair_round_no_label"
                style="@style/RegularLabelStyle"
                android:layout_gravity="center_vertical"
                android:text="@string/pair_round_no" />

            <Spinner
                android:id="@+id/pair_round_no_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:dropDownWidth="@dimen/default_dropdown_width"
                android:entries="@array/round_number_array" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/pairable_players_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <FrameLayout
            android:id="@+id/tables_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:contentDescription="@string/ok_label"
            android:onClick="onClickOk"
            android:text="@string/pair_ok_label" />
    </LinearLayout>
</layout>